--- a/src/components/MenuContainer/MenuContainer.css
+++ b/src/components/MenuContainer/MenuContainer.css
@@ -7,15 +7,34 @@
     overflow-y: hidden;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    
+}
+
+@media only screen and (min-width: 960px) and (max-width: 1191px) {
     .containerProducts {
-        width: 65vw;
-        height: 80vh;
+        width: 56vw;
+        height: 86vh;
         flex-wrap: wrap;
-        align-content: flex-start;
+        align-content: space-between;
+        justify-content: space-between;
         overflow-x: unset;
         overflow-y: unset;
-        margin-left: 50px;
-        margin-top: 30px;
+        margin-left: 30px;
+        margin-top: 0;
+    }
+}
+
+@media only screen and (min-width: 1192px){
+    .containerProducts {
+        width: 64vw;
+        height: 100vh;
+        flex-wrap: wrap;
+        align-content: space-between;
+        justify-content: space-between;
+        overflow-x: unset;
+        overflow-y: unset;
+        margin-left: 30px;
+        margin-top: 0;
     }
 }
