--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -67,16 +67,8 @@
     filter: brightness(0.8);
 }
 
-@media only screen and (min-width: 768px) {
-    .product {
-        margin: 0 20px 16px 0;
-        width: 250px;
-        height: 346px;
-    }
-
-    .product .imgContainer{
-        width: 250px;
-    }
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    
 
     .product img {}
 
@@ -87,4 +79,22 @@
     .product span {}
 
     .product button {}
+}
+
+@media only screen and (min-width: 960px) and (max-width: 1191px){
+    .product {
+        margin: 0;
+        width: 18vw;
+        height: 42vh;
+    }
+    .product .imgContainer{
+        width: 18vw;
+    }
+}
+@media only screen and (min-width: 1192px){
+    .product {
+        margin: 0;
+        width: 250px;
+        height: 346px;
+    }
 }
